[gd_scene load_steps=4 format=2]

[ext_resource path="res://ShootingBullets/assets/bullet.glb" type="PackedScene" id=1]
[ext_resource path="res://ShootingBullets/assets/Bullet.gd" type="Script" id=2]
[ext_resource path="res://ShootingBullets/assets/HitEffectSpawner.gd" type="Script" id=3]

[node name="Bullet" type="Spatial"]
script = ExtResource( 2 )

[node name="bullet" parent="." instance=ExtResource( 1 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="HitEffectSpawner" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="HitTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="HitTimer" to="." method="hit_something"]
